force-app/main/default/objects/LMS_Certification_Mapping__c/LMS_Certification_Mapping__c.object-meta.xml
<CustomObject>
    <description>Maintains the LMS Certification to Salesforce Product mappings</description>
    <label>LMS Certification Mapping</label>
    <nameField>
        <displayFormat>CER-{00000}</displayFormat>
        <label>LMS Certification Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Certification Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>