force-app/main/default/objects/LMS_Certification_Mapping__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-42718 - Show if LMS Certification to Salesforce Product mapping is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>