force-app/main/default/objects/LMS_Certification_Mapping__c/fields/Certification_ID__c.field-meta.xml
<CustomField>
    <fullName>Certification_ID__c</fullName>
    <description>DCP-42718 - Stores LMS Certification ID</description>
    <label>Certification ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>