force-app/main/default/objects/LMS_Certification_Mapping__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <description>DCP-42718 - Stores LMS Certification Name.</description>
    <label>Certification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>