force-app/main/default/objects/LMS_Certification_Mapping__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>DCP-42718 - Stores Salesforce Product Family values.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMS_Certification_Product_Family</valueSetName>
    </valueSet>
</CustomField>