force-app/main/default/objects/LMS_Certification_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certification_ID__c</columns>
    <columns>Certification_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>